# ppq

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  ProgramEntrance.py  ProgramEntranceExt.py  ProgramEntrance_1.py  ProgramEntrance_2.py  README.md  Util.py  env.sh  onnxruntime_profile__2023-01-03_20-28-40.json  requirements.txt  setup.py  test copy.py  test.py
.github/workflows/: lint.yml  ppq_simulator.yml
benchmark/: ProgramEntrance.py  README.md  example.py  requirements.txt
benchmark/classification/: NCNN.py  OpenVino.py  README.md  SNPE.py  TRT.py  benchmark.py  cfg.py  demo.ipynb  evaluation_with_imagenet.py  fp32_model.py  test.py  utils.py
benchmark/detection/: README.md  benchmark.py  cfg.py  coco_util.py  demo.py  (+7 more)
md_doc/: Executor.md  Graph.md  OptimPass.md  TensorQuantizationConfig.md  add_new_platform.md  deploy_for_mnn.md  deploy_trt_by_OnnxParser.md  deploy_trt_by_api.md  how_to_use.md  inference_with_ncnn.md  inference_with_ppl_cuda.md  inference_with_snpe_dsp.md  inference_with_tensorrt.md  ppq_qlinear_function.md
ppq/: README.md  __init__.py
ppq/samples/TensorRT/lenet_demo/: CMakeLists.txt  generate_onnx.py  lenet_int8.cpp  lenet_int8.py
ppq/samples/TensorRT/lenet_demo/common/: ErrorRecorder.h  common.h  logging.h
tests/: __init__.py  testBnToConv.py  testFuseBias.py  test_activation_fusion.py  test_block.py  test_block_split.py  test_cuda_kernel.py  test_gemm_fusion.py  test_gemm_split.py  test_graph_api.py  test_isotone.py  test_layerwise_equalization.py  test_onnxruntime.py  test_persus.py  test_rounding.py  test_system.py
(+389 files in other folders)
